--- a/app/blocks/modal-output/modal-output.scss
+++ b/app/blocks/modal-output/modal-output.scss
@@ -7,27 +7,80 @@
   align-items: center;
   box-sizing: border-box;
   cursor: pointer;
-  transition: border $ease-main,
-  box-shadow $ease-main;
+  transition: border $ease-main, box-shadow $ease-main;
   border: 1px solid $nd-color-border5;
 
-  @include rule(padding-left, (xl: 19px, xlg: 19, lg: 12, md: 12, sm: 18));
-  @include rule(padding-right, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 30));
-  @include rule(padding-top, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 5));
-  @include rule(padding-bottom, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 5));
-  @include rule(border-radius, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
-  @include rule(height, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 35));
+  @include rule(
+    padding-left,
+    (
+      xl: 19px,
+      xlg: 19,
+      lg: 12,
+      md: 12,
+      sm: 18,
+    )
+  );
+  @include rule(
+    padding-right,
+    (
+      xl: 35px,
+      xlg: 35,
+      lg: 35,
+      md: 35,
+      sm: 30,
+    )
+  );
+  @include rule(
+    padding-top,
+    (
+      xl: 5px,
+      xlg: 5,
+      lg: 5,
+      md: 5,
+      sm: 5,
+    )
+  );
+  @include rule(
+    padding-bottom,
+    (
+      xl: 5px,
+      xlg: 5,
+      lg: 5,
+      md: 5,
+      sm: 5,
+    )
+  );
+  @include rule(
+    border-radius,
+    (
+      xl: 20px,
+      xlg: 20,
+      lg: 20,
+      md: 20,
+      sm: 20,
+    )
+  );
+  @include rule(
+    height,
+    (
+      xl: 35px,
+      xlg: 35,
+      lg: 35,
+      md: 35,
+      sm: 35,
+    )
+  );
 
   &:hover {
     body:not(.is-touched-device) & {
-      @include screen('sm', min, 2) {
+      @include screen("sm", min, 2) {
         border-color: $nd-color-basic;
       }
     }
   }
 
   &.is-selected {
-    @include screen('sm', min, 2) {
+    @include screen("sm", min, 2) {
       border-color: $nd-color-basic;
     }
   }
@@ -35,7 +88,7 @@
   &.is-opened,
   &:focus,
   &:active {
-    @include screen('sm', min, 2) {
+    @include screen("sm", min, 2) {
       border-color: $nd-color-main !important;
       box-shadow: inset 0 0 0 1px $nd-color-main;
     }
@@ -44,11 +97,20 @@
   &__placeholder {
     display: block;
     color: $nd-color-basic;
-    letter-spacing: -.02em;
+    letter-spacing: -0.02em;
     font-weight: 400;
     width: 100%;
 
-    @include rule(font-size, (xl: 15px, xlg: 15, lg: 14, md: 14, sm: 15));
+    @include rule(
+      font-size,
+      (
+        xl: 15px,
+        xlg: 15,
+        lg: 14,
+        md: 14,
+        sm: 15,
+      )
+    );
 
     #{$b}.is-selected & {
       display: none;
@@ -60,7 +122,16 @@
     color: $nd-color-logo;
     display: none;
 
-    @include rule(font-size, (xl: 15px, xlg: 15, lg: 14, md: 14, sm: 15));
+    @include rule(
+      font-size,
+      (
+        xl: 15px,
+        xlg: 15,
+        lg: 14,
+        md: 14,
+        sm: 15,
+      )
+    );
 
     #{$b}.is-selected & {
       display: block;
@@ -87,11 +158,38 @@
     transition: transform $ease-main;
     overflow: hidden;
 
-    @include rule(width, (xl: 40px, xlg: 40, lg: 40, md: 40, sm: 30));
+    @include rule(
+      width,
+      (
+        xl: 40px,
+        xlg: 40,
+        lg: 40,
+        md: 40,
+        sm: 30,
+      )
+    );
 
     svg {
-      @include rule(width, (xl: 11px, xlg: 11, lg: 11, md: 11, sm: 11));
-      @include rule(heigh, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 8));
+      @include rule(
+        width,
+        (
+          xl: 11px,
+          xlg: 11,
+          lg: 11,
+          md: 11,
+          sm: 11,
+        )
+      );
+      @include rule(
+        heigh,
+        (
+          xl: 8px,
+          xlg: 8,
+          lg: 8,
+          md: 8,
+          sm: 8,
+        )
+      );
 
       fill: currentColor;
       flex: none;
@@ -121,10 +219,46 @@
     top: 50%;
     transform: translate3d(0, -50%, 0);
 
-    @include rule(left, (xl: 9px, xlg: 9, lg: 9, md: 9, sm: 9));
-    @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
-    @include rule(width, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 28));
-    @include rule(height, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 28));
+    @include rule(
+      left,
+      (
+        xl: 9px,
+        xlg: 9,
+        lg: 9,
+        md: 9,
+        sm: 9,
+      )
+    );
+    @include rule(
+      font-size,
+      (
+        xl: 15px,
+        xlg: 15,
+        lg: 15,
+        md: 15,
+        sm: 15,
+      )
+    );
+    @include rule(
+      width,
+      (
+        xl: 28px,
+        xlg: 28,
+        lg: 28,
+        md: 28,
+        sm: 28,
+      )
+    );
+    @include rule(
+      height,
+      (
+        xl: 28px,
+        xlg: 28,
+        lg: 28,
+        md: 28,
+        sm: 28,
+      )
+    );
 
     svg {
       position: absolute;
@@ -136,8 +270,26 @@
       opacity: 0;
       transition: opacity $ease-main;
 
-      @include rule(width, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
-      @include rule(height, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
+      @include rule(
+        width,
+        (
+          xl: 10px,
+          xlg: 10,
+          lg: 10,
+          md: 10,
+          sm: 10,
+        )
+      );
+      @include rule(
+        height,
+        (
+          xl: 10px,
+          xlg: 10,
+          lg: 10,
+          md: 10,
+          sm: 10,
+        )
+      );
     }
   }
 
@@ -154,13 +306,55 @@
     opacity: 0;
     pointer-events: none;
 
-    @include cRule(display, (xl: block, sm: none));
-    @include rule(right, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 0));
-    @include rule(width, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
-    @include rule(height, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+    @include cRule(
+      display,
+      (
+        xl: block,
+        sm: none,
+      )
+    );
+    @include rule(
+      right,
+      (
+        xl: 3px,
+        xlg: 3,
+        lg: 3,
+        md: 3,
+        sm: 0,
+      )
+    );
+    @include rule(
+      width,
+      (
+        xl: 20px,
+        xlg: 20,
+        lg: 20,
+        md: 20,
+        sm: 20,
+      )
+    );
+    @include rule(
+      height,
+      (
+        xl: 20px,
+        xlg: 20,
+        lg: 20,
+        md: 20,
+        sm: 20,
+      )
+    );
 
     svg {
-      @include rule(width, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 8));
+      @include rule(
+        width,
+        (
+          xl: 8px,
+          xlg: 8,
+          lg: 8,
+          md: 8,
+          sm: 8,
+        )
+      );
 
       display: inline-block;
       height: 100%;
@@ -189,17 +383,88 @@
   }
 
   &_h40 {
-    @include rule(height, (xl: 40px, xlg: 40, lg: 40, md: 40, sm: 40));
+    @include rule(
+      height,
+      (
+        xl: 40px,
+        xlg: 40,
+        lg: 40,
+        md: 40,
+        sm: 40,
+      )
+    );
   }
 
   &_special {
-    @include rule(padding-left, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 10));
-    @include rule(padding-right, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 5));
-    @include rule(padding-top, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 7));
-    @include rule(padding-bottom, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 8));
-    @include rule(height, (xl: 46px, xlg: 46, lg: 46, md: 46, sm: 44));
-    @include rule(width, (xl: 158px, xlg: 158, lg: 150, md: 150));
-    @include rule(border-radius, (xl: 35px, xlg: 35, lg: 35, md: 35, sm: 35));
+    @include rule(
+      padding-left,
+      (
+        xl: 13px,
+        xlg: 13,
+        lg: 13,
+        md: 13,
+        sm: 10,
+      )
+    );
+    @include rule(
+      padding-right,
+      (
+        xl: 35px,
+        xlg: 35,
+        lg: 35,
+        md: 35,
+        sm: 5,
+      )
+    );
+    @include rule(
+      padding-top,
+      (
+        xl: 5px,
+        xlg: 5,
+        lg: 5,
+        md: 5,
+        sm: 7,
+      )
+    );
+    @include rule(
+      padding-bottom,
+      (
+        xl: 5px,
+        xlg: 5,
+        lg: 5,
+        md: 5,
+        sm: 8,
+      )
+    );
+    @include rule(
+      height,
+      (
+        xl: 46px,
+        xlg: 46,
+        lg: 46,
+        md: 46,
+        sm: 44,
+      )
+    );
+    @include rule(
+      width,
+      (
+        xl: 158px,
+        xlg: 158,
+        lg: 150,
+        md: 150,
+      )
+    );
+    @include rule(
+      border-radius,
+      (
+        xl: 35px,
+        xlg: 35,
+        lg: 35,
+        md: 35,
+        sm: 35,
+      )
+    );
 
     transition: background $ease-main;
     border: none;
@@ -209,13 +474,15 @@
     align-items: center;
     background-color: $nd-color-basic-light;
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       width: 100%;
     }
 
     &:hover,
-    &.is-opened, &:focus, &:active {
-      @include screen('sm', min, 2) {
+    &.is-opened,
+    &:focus,
+    &:active {
+      @include screen("sm", min, 2) {
         background-color: $nd-color-selection-bg;
       }
     }
@@ -227,27 +494,35 @@
     }
 
     &::before {
-      @include rule(margin-right, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 0));
+      @include rule(
+        margin-right,
+        (
+          xl: 13px,
+          xlg: 13,
+          lg: 13,
+          md: 13,
+          sm: 0,
+        )
+      );
 
       display: block;
-      content: '';
+      content: "";
       background-repeat: no-repeat;
       background-position: 50% 50%;
       background-size: contain;
       height: 100%;
       flex: none;
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         display: none;
       }
     }
 
     #{$b} {
-
       &__content {
         display: block;
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
@@ -258,9 +533,18 @@
       }
 
       &__toggle {
-        @include rule(width, (xl: 47px, xlg: 47, lg: 47, md: 40, sm: 30));
+        @include rule(
+          width,
+          (
+            xl: 47px,
+            xlg: 47,
+            lg: 47,
+            md: 40,
+            sm: 30,
+          )
+        );
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           display: none;
         }
       }
@@ -269,46 +553,68 @@
         display: flex;
         align-items: center;
         color: $nd-color-basic;
-        letter-spacing: -.02em;
+        letter-spacing: -0.02em;
         font-family: $font-main;
         font-weight: 400;
         line-height: (18 / 15);
-        transition: color $ease-main,
-        font $ease-main;
+        transition: color $ease-main, font $ease-main;
 
-        @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 11));
+        @include rule(
+          font-size,
+          (
+            xl: 15px,
+            xlg: 15,
+            lg: 15,
+            md: 15,
+            sm: 11,
+          )
+        );
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           font-family: $font-main;
           color: $nd-color-gray-text;
-          letter-spacing: -.02em;
+          letter-spacing: -0.02em;
           width: calc(100% + (400 / 375) * 1vw);
         }
 
         &::before {
-          @include screen('sm', max, 2) {
+          @include screen("sm", max, 2) {
             display: inline-block;
-            content: '';
+            content: "";
             background-position: 50% 50%;
             background-repeat: no-repeat;
             background-size: contain;
           }
 
-          @include rule(margin-right, (sm: 2));
+          @include rule(
+            margin-right,
+            (
+              sm: 2,
+            )
+          );
         }
       }
 
       &__values {
         display: none;
         font-family: $font-main;
-        letter-spacing: -.02em;
+        letter-spacing: -0.02em;
         color: $nd-color-basic;
         font-weight: 400;
         line-height: (18 / 15);
 
-        @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 12));
+        @include rule(
+          font-size,
+          (
+            xl: 15px,
+            xlg: 15,
+            lg: 15,
+            md: 15,
+            sm: 12,
+          )
+        );
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           display: block;
           font-family: $font-stolzl;
         }
@@ -327,9 +633,18 @@
         font-weight: 400;
         line-height: (13 / 11);
 
-        @include rule(font-size, (xl: 11px, xlg: 11, lg: 11, md: 11, sm: 12));
+        @include rule(
+          font-size,
+          (
+            xl: 11px,
+            xlg: 11,
+            lg: 11,
+            md: 11,
+            sm: 12,
+          )
+        );
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           display: flex;
         }
       }
@@ -351,17 +666,101 @@
         font-weight: 400;
         line-height: (13 / 11);
 
-        @include rule(font-size, (xl: 11px, xlg: 11, lg: 11, md: 11, sm: 12));
+        @include rule(
+          font-size,
+          (
+            xl: 11px,
+            xlg: 11,
+            lg: 11,
+            md: 11,
+            sm: 12,
+          )
+        );
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           display: flex;
         }
       }
     }
   }
 
+  &_square-rounded {
+    border-color: $nd-color-field-border;
+
+    @include rule(
+      padding-left,
+      (
+        xl: 10px,
+        xlg: 10,
+        lg: 10,
+        md: 10,
+        sm: 10,
+      )
+    );
+
+    &.is-selected {
+      border-color: $nd-color-field-border;
+    }
+
+    @include rule(
+      border-radius,
+      (
+        xl: 3px,
+        xlg: 3,
+        lg: 3,
+        md: 3,
+        sm: 3,
+      )
+    );
+
+    #{$b} {
+      &__values,
+      &__placeholder {
+        line-height: (21 / 17);
+        font-weight: 400;
+        letter-spacing: normal;
+        color: $nd-color-placeholder;
+
+        @include rule(
+          font-size,
+          (
+            xl: 17px,
+            xlg: 17,
+            lg: 17,
+            md: 17,
+            sm: 17,
+          )
+        );
+      }
+
+      &__toggle {
+        color: $nd-color-basic;
+
+        @include rule(
+          width,
+          (
+            xl: 35px,
+            xlg: 35,
+            lg: 35,
+            md: 35,
+            sm: 30,
+          )
+        );
+      }
+    }
+  }
+
   &_notoggle {
-    @include rule(padding-right, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 5));
+    @include rule(
+      padding-right,
+      (
+        xl: 13px,
+        xlg: 13,
+        lg: 13,
+        md: 13,
+        sm: 5,
+      )
+    );
     #{$b} {
       &__toggle {
         display: none;
@@ -369,8 +768,17 @@
     }
   }
 
-  &_no-icon  {
-    @include rule(padding-left, (xl: 27px, xlg: 27, lg: 27, md: 27, sm: 13));
+  &_no-icon {
+    @include rule(
+      padding-left,
+      (
+        xl: 27px,
+        xlg: 27,
+        lg: 27,
+        md: 27,
+        sm: 13,
+      )
+    );
 
     &::before {
       display: none;
@@ -379,8 +787,26 @@
 
   &_location {
     &::before {
-      @include rule(width, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 0));
-      @include rule(height, (xl: 17px, xlg: 17, lg: 17, md: 17, sm: 0));
+      @include rule(
+        width,
+        (
+          xl: 14px,
+          xlg: 14,
+          lg: 14,
+          md: 14,
+          sm: 0,
+        )
+      );
+      @include rule(
+        height,
+        (
+          xl: 17px,
+          xlg: 17,
+          lg: 17,
+          md: 17,
+          sm: 0,
+        )
+      );
 
       background-image: $icon-location-blue;
     }
@@ -388,10 +814,20 @@
     #{$b} {
       &__placeholder {
         &::before {
-          @include rule(width, (sm: 7));
-          @include rule(height, (sm: 10));
+          @include rule(
+            width,
+            (
+              sm: 7,
+            )
+          );
+          @include rule(
+            height,
+            (
+              sm: 10,
+            )
+          );
 
-          @include screen('sm', max, 2) {
+          @include screen("sm", max, 2) {
             background-image: $icon-location2;
           }
         }
@@ -400,15 +836,39 @@
   }
 
   &_team {
-    @include rule(width, (lg: 140, md: 140));
+    @include rule(
+      width,
+      (
+        lg: 140,
+        md: 140,
+      )
+    );
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       width: 100%;
     }
 
     &::before {
-      @include rule(width, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 0));
-      @include rule(height, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 0));
+      @include rule(
+        width,
+        (
+          xl: 26px,
+          xlg: 26,
+          lg: 26,
+          md: 26,
+          sm: 0,
+        )
+      );
+      @include rule(
+        height,
+        (
+          xl: 14px,
+          xlg: 14,
+          lg: 14,
+          md: 14,
+          sm: 0,
+        )
+      );
 
       background-image: $icon-team-blue;
     }
@@ -416,10 +876,20 @@
     #{$b} {
       &__placeholder {
         &::before {
-          @include rule(width, (sm: 14));
-          @include rule(height, (sm: 8));
+          @include rule(
+            width,
+            (
+              sm: 14,
+            )
+          );
+          @include rule(
+            height,
+            (
+              sm: 8,
+            )
+          );
 
-          @include screen('sm', max, 2) {
+          @include screen("sm", max, 2) {
             background-image: $icon-team2;
           }
         }
@@ -429,8 +899,26 @@
 
   &_type {
     &::before {
-      @include rule(width, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 0));
-      @include rule(height, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 0));
+      @include rule(
+        width,
+        (
+          xl: 15px,
+          xlg: 15,
+          lg: 15,
+          md: 15,
+          sm: 0,
+        )
+      );
+      @include rule(
+        height,
+        (
+          xl: 15px,
+          xlg: 15,
+          lg: 15,
+          md: 15,
+          sm: 0,
+        )
+      );
 
       background-image: $icon-type;
     }
@@ -438,10 +926,20 @@
     #{$b} {
       &__placeholder {
         &::before {
-          @include rule(width, (sm: 9));
-          @include rule(height, (sm: 9));
+          @include rule(
+            width,
+            (
+              sm: 9,
+            )
+          );
+          @include rule(
+            height,
+            (
+              sm: 9,
+            )
+          );
 
-          @include screen('sm', max, 2) {
+          @include screen("sm", max, 2) {
             background-image: $icon-type2;
           }
         }
@@ -450,10 +948,29 @@
   }
 
   &_filter {
-    transition: border $ease-main, box-shadow $ease-main, padding $ease-main, background $ease-main, opacity $ease-main;
+    transition: border $ease-main, box-shadow $ease-main, padding $ease-main,
+      background $ease-main, opacity $ease-main;
 
-    @include rule(min-width, (xl: 185px, xlg: 185, lg: 185, md: 185, sm: 0));
-    @include rule(padding-left, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 13));
+    @include rule(
+      min-width,
+      (
+        xl: 185px,
+        xlg: 185,
+        lg: 185,
+        md: 185,
+        sm: 0,
+      )
+    );
+    @include rule(
+      padding-left,
+      (
+        xl: 26px,
+        xlg: 26,
+        lg: 26,
+        md: 26,
+        sm: 13,
+      )
+    );
 
     &::before {
       display: none;
@@ -466,7 +983,16 @@
     }
 
     &.is-filled {
-      @include rule(padding-left, (xl: 53px, xlg: 53, lg: 53, md: 53, sm: 40));
+      @include rule(
+        padding-left,
+        (
+          xl: 53px,
+          xlg: 53,
+          lg: 53,
+          md: 53,
+          sm: 40,
+        )
+      );
 
       svg {
         opacity: 0;
