--- a/app/blocks/modal/modal.scss
+++ b/app/blocks/modal/modal.scss
@@ -9,9 +9,18 @@
   justify-content: flex-end;
   z-index: 25;
 
-  @include rule(padding-bottom, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 0));
+  @include rule(
+    padding-bottom,
+    (
+      xl: 10px,
+      xlg: 10,
+      lg: 10,
+      md: 10,
+      sm: 0,
+    )
+  );
 
-  @include screen('sm', max, 2) {
+  @include screen("sm", max, 2) {
     position: fixed;
     top: 0;
     left: 0;
@@ -19,7 +28,8 @@
     height: 100%;
   }
 
-  &.is-opened, &.is-animated {
+  &.is-opened,
+  &.is-animated {
     visibility: visible;
     pointer-events: auto;
   }
@@ -33,10 +43,10 @@
     z-index: 1;
     opacity: 0;
     transition: opacity $ease-main;
-    background-color: rgba($color-overlay, .2);
+    background-color: rgba($color-overlay, 0.2);
 
     .is-opened & {
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         opacity: 1;
       }
     }
@@ -46,10 +56,8 @@
     position: relative;
     background-color: $nd-color-basic-light;
     color: $nd-color-basic;
-    transition: opacity $ease-main,
-    transform $ease-main;
-    box-shadow: 0 3px 14px rgba(0, 0, 0, .13),
-    0 0 4px rgba(56, 58, 68, .09);
+    transition: opacity $ease-main, transform $ease-main;
+    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.13), 0 0 4px rgba(56, 58, 68, 0.09);
     box-sizing: border-box;
     will-change: opacity;
     display: flex;
@@ -57,24 +65,61 @@
     flex-direction: column;
     z-index: 2;
 
-    @include rule(margin-top, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 0));
-    @include rule(width, (xl: 478px, xlg: 478, lg: 478, md: 478));
-    @include rule(max-height, (xl: 400px, xlg: 400, lg: 400, md: 400));
-    @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 0));
+    @include rule(
+      margin-top,
+      (
+        xl: 10px,
+        xlg: 10,
+        lg: 10,
+        md: 10,
+        sm: 0,
+      )
+    );
+    @include rule(
+      width,
+      (
+        xl: 478px,
+        xlg: 478,
+        lg: 478,
+        md: 478,
+      )
+    );
+    @include rule(
+      max-height,
+      (
+        xl: 400px,
+        xlg: 400,
+        lg: 400,
+        md: 400,
+      )
+    );
+    @include rule(
+      border-radius,
+      (
+        xl: 3px,
+        xlg: 3,
+        lg: 3,
+        md: 3,
+        sm: 0,
+      )
+    );
 
-    @include screen('xlg', max, 2) {
-      box-shadow: 0 pxtovw(3, 1660) pxtovw(14, 1660) rgba(0, 0, 0, .13), 0 0 pxtovw(4, 1660) rgba(56, 58, 68, .09);
+    @include screen("xlg", max, 2) {
+      box-shadow: 0 pxtovw(3, 1660) pxtovw(14, 1660) rgba(0, 0, 0, 0.13),
+        0 0 pxtovw(4, 1660) rgba(56, 58, 68, 0.09);
     }
 
-    @include screen('lg', max, 2) {
-      box-shadow: 0 pxtovw(3, 1366) pxtovw(14, 1366) rgba(0, 0, 0, .13), 0 0 pxtovw(4, 1366) rgba(56, 58, 68, .09);
+    @include screen("lg", max, 2) {
+      box-shadow: 0 pxtovw(3, 1366) pxtovw(14, 1366) rgba(0, 0, 0, 0.13),
+        0 0 pxtovw(4, 1366) rgba(56, 58, 68, 0.09);
     }
 
-    @include screen('md', max, 2) {
-      box-shadow: 0 pxtovw(3, 960) pxtovw(14, 960) rgba(0, 0, 0, .13), 0 0 pxtovw(4, 960) rgba(56, 58, 68, .09);
+    @include screen("md", max, 2) {
+      box-shadow: 0 pxtovw(3, 960) pxtovw(14, 960) rgba(0, 0, 0, 0.13),
+        0 0 pxtovw(4, 960) rgba(56, 58, 68, 0.09);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       transform: translate3d(0, 100%, 0);
       overflow: hidden;
       width: 100%;
@@ -95,31 +140,81 @@
     overscroll-behavior: none;
 
     @include native-scroll;
-    @include rule(padding-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 24));
-    @include rule(padding-bottom, (xl: 67px, xlg: 67, lg: 67, md: 67, sm: 65));
-    @include rule(padding-left, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 25));
-    @include rule(padding-right, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 25));
+    @include rule(
+      padding-top,
+      (
+        xl: 30px,
+        xlg: 30,
+        lg: 30,
+        md: 30,
+        sm: 24,
+      )
+    );
+    @include rule(
+      padding-bottom,
+      (
+        xl: 67px,
+        xlg: 67,
+        lg: 67,
+        md: 67,
+        sm: 65,
+      )
+    );
+    @include rule(
+      padding-left,
+      (
+        xl: 36px,
+        xlg: 36,
+        lg: 36,
+        md: 36,
+        sm: 25,
+      )
+    );
+    @include rule(
+      padding-right,
+      (
+        xl: 36px,
+        xlg: 36,
+        lg: 36,
+        md: 36,
+        sm: 25,
+      )
+    );
 
     .is-overlay-user-panel & {
-      @include rule(padding-bottom, (sm: 107));
+      @include rule(
+        padding-bottom,
+        (
+          sm: 107,
+        )
+      );
     }
   }
 
   &__describe {
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       display: none;
     }
   }
 
   &__text {
-    @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+    @include rule(
+      font-size,
+      (
+        xl: 15px,
+        xlg: 15,
+        lg: 15,
+        md: 15,
+        sm: 15,
+      )
+    );
 
     line-height: (18 / 15);
     font-weight: 300;
-    letter-spacing: -.02em;
+    letter-spacing: -0.02em;
     color: $nd-color-gray-text2;
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       display: none;
     }
   }
@@ -128,14 +223,23 @@
     display: block;
     width: 100%;
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       grid-column: 1 / 2;
       grid-row: 2 / 3;
       align-self: end;
     }
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 0));
+      @include rule(
+        margin-top,
+        (
+          xl: 28px,
+          xlg: 28,
+          lg: 28,
+          md: 28,
+          sm: 0,
+        )
+      );
     }
 
     &_mt0 {
@@ -152,7 +256,7 @@
     color: $nd-color-basic;
     box-sizing: border-box;
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       display: flex;
       flex-direction: row-reverse;
       justify-content: space-between;
@@ -162,15 +266,30 @@
   }
 
   &__close {
-    @include rule(width, (sm: 32));
-    @include rule(height, (sm: 32));
-    @include rule(background-size, (sm: 14));
+    @include rule(
+      width,
+      (
+        sm: 32,
+      )
+    );
+    @include rule(
+      height,
+      (
+        sm: 32,
+      )
+    );
+    @include rule(
+      background-size,
+      (
+        sm: 14,
+      )
+    );
 
     font-size: 0;
     cursor: pointer;
     background-repeat: no-repeat;
     background-position: 50% 50%;
-    background-image: url('../images/bg/bg-bold-cross.svg');
+    background-image: url("../images/bg/bg-bold-cross.svg");
   }
 
   &__title {
@@ -180,12 +299,27 @@
     line-height: (20 / 17);
     font-weight: 400;
 
-    @include rule(font-size, (sm: 17));
+    @include rule(
+      font-size,
+      (
+        sm: 17,
+      )
+    );
   }
 
   &__clear {
-    @include rule(width, (sm: 40));
-    @include rule(font-size, (sm: 15));
+    @include rule(
+      width,
+      (
+        sm: 40,
+      )
+    );
+    @include rule(
+      font-size,
+      (
+        sm: 15,
+      )
+    );
 
     position: relative;
     line-height: (18 / 15);
@@ -193,7 +327,7 @@
     cursor: pointer;
 
     &::after {
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         @include pseudo;
 
         top: 50%;
@@ -206,11 +340,26 @@
   }
 
   &__range {
-    @include rule(margin-left, (sm: -5));
-    @include rule(margin-right, (sm: -5));
-    @include rule(margin-top, (sm: -15));
+    @include rule(
+      margin-left,
+      (
+        sm: -5,
+      )
+    );
+    @include rule(
+      margin-right,
+      (
+        sm: -5,
+      )
+    );
+    @include rule(
+      margin-top,
+      (
+        sm: -15,
+      )
+    );
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       width: calc(100% + (1000 / 375) * 1vw);
     }
   }
@@ -222,7 +371,7 @@
     box-sizing: border-box;
     z-index: 2;
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -233,15 +382,70 @@
       display: flex;
       justify-content: space-between;
 
-      @include rule(padding-left, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 20));
-      @include rule(padding-right, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 20));
-      @include rule(padding-top, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
-      @include rule(padding-bottom, (xl: 67px, xlg: 67, lg: 67, md: 67, sm: 63));
-      @include rule(margin-top, (xl: -44px, xlg: -44, lg: -44, md: -44, sm: -44));
+      @include rule(
+        padding-left,
+        (
+          xl: 36px,
+          xlg: 36,
+          lg: 36,
+          md: 36,
+          sm: 20,
+        )
+      );
+      @include rule(
+        padding-right,
+        (
+          xl: 36px,
+          xlg: 36,
+          lg: 36,
+          md: 36,
+          sm: 20,
+        )
+      );
+      @include rule(
+        padding-top,
+        (
+          xl: 10px,
+          xlg: 10,
+          lg: 10,
+          md: 10,
+          sm: 10,
+        )
+      );
+      @include rule(
+        padding-bottom,
+        (
+          xl: 67px,
+          xlg: 67,
+          lg: 67,
+          md: 67,
+          sm: 63,
+        )
+      );
+      @include rule(
+        margin-top,
+        (
+          xl: -44px,
+          xlg: -44,
+          lg: -44,
+          md: -44,
+          sm: -44,
+        )
+      );
 
       .is-overlay-user-panel & {
-        @include rule(margin-top, (sm: -86));
-        @include rule(padding-bottom, (sm: 104));
+        @include rule(
+          margin-top,
+          (
+            sm: -86,
+          )
+        );
+        @include rule(
+          padding-bottom,
+          (
+            sm: 104,
+          )
+        );
       }
     }
   }
@@ -254,22 +458,22 @@
     flex-wrap: wrap;
     box-sizing: border-box;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       margin: pxtovw(-13, 1660) pxtovw(-10, 1660) 0;
       width: calc(100% + ((2000 / 1660) * 1vw));
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       margin: pxtovw(-13, 1366) pxtovw(-10, 1366) 0;
       width: calc(100% + ((2000 / 1366) * 1vw));
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       margin: pxtovw(-13, 960) pxtovw(-10, 960) 0;
       width: calc(100% + ((2000 / 960) * 1vw));
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       display: block;
       width: 100%;
       margin: 0;
@@ -288,19 +492,19 @@
     margin: 13px 10px 0;
     flex: 1;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       margin: pxtovw(13, 1660) pxtovw(10, 1660) 0;
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       margin: pxtovw(13, 1366) pxtovw(10, 1366) 0;
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       margin: pxtovw(13, 960) pxtovw(10, 960) 0;
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       margin: 0;
       flex: none;
       width: 100%;
@@ -311,18 +515,27 @@
     }
 
     &:not(:first-child) {
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-top: -1px;
       }
     }
 
     .check-button {
       &__content {
-        @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 17));
+        @include rule(
+          font-size,
+          (
+            xl: 13px,
+            xlg: 13,
+            lg: 13,
+            md: 13,
+            sm: 17,
+          )
+        );
 
         line-height: (18 / 13);
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           line-height: (22 / 18);
         }
       }
@@ -338,35 +551,88 @@
   &__reset {
     flex: none;
 
-    @include rule(width, (xl: 85px, xlg: 85, lg: 85, md: 85, sm: 85));
+    @include rule(
+      width,
+      (
+        xl: 85px,
+        xlg: 85,
+        lg: 85,
+        md: 85,
+        sm: 85,
+      )
+    );
   }
 
   &__setter {
     flex: 1;
 
     &:not(:first-child) {
-      @include rule(margin-left, (xl: 13px, xlg: 13, lg:13, md: 13, sm: 13));
+      @include rule(
+        margin-left,
+        (
+          xl: 13px,
+          xlg: 13,
+          lg: 13,
+          md: 13,
+          sm: 13,
+        )
+      );
     }
   }
 
   &__sup-button {
     width: 100%;
 
-    @include rule(padding-left, (xl: 40px, xlg: 40, lg: 40, md: 40, sm: 40));
-    @include rule(padding-left, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+    @include rule(
+      padding-left,
+      (
+        xl: 40px,
+        xlg: 40,
+        lg: 40,
+        md: 40,
+        sm: 40,
+      )
+    );
+    @include rule(
+      padding-left,
+      (
+        xl: 20px,
+        xlg: 20,
+        lg: 20,
+        md: 20,
+        sm: 20,
+      )
+    );
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 21px, xlg: 21, lg: 21, md: 21, sm: 21));
+      @include rule(
+        margin-top,
+        (
+          xl: 21px,
+          xlg: 21,
+          lg: 21,
+          md: 21,
+          sm: 21,
+        )
+      );
     }
   }
 
   &_small {
     #{$b} {
       &__wrapper {
-        @include rule(width, (xl: 230px, xlg: 230, lg: 230, md: 230));
+        @include rule(
+          width,
+          (
+            xl: 230px,
+            xlg: 230,
+            lg: 230,
+            md: 230,
+          )
+        );
         box-sizing: border-box;
 
-        @include screen('sm', max, 2) {
+        @include screen("sm", max, 2) {
           width: 100%;
         }
       }
@@ -374,17 +640,153 @@
       &__content {
         box-sizing: border-box;
 
-        @include rule(padding, (xl: 12px 0 17px, xlg: 12 0 17, lg: 12 0 17, md: 12 0 17, sm: 25 25 65 25));
+        @include rule(
+          padding,
+          (
+            xl: 12px 0 17px,
+            xlg: 12 0 17,
+            lg: 12 0 17,
+            md: 12 0 17,
+            sm: 25 25 65 25,
+          )
+        );
       }
 
       &__item {
         &:not(:first-child) {
-          @include rule(margin-top, (xl: 8px, xlg: 8, lg: 8, md: 8));
+          @include rule(
+            margin-top,
+            (
+              xl: 8px,
+              xlg: 8,
+              lg: 8,
+              md: 8,
+            )
+          );
 
-          @include screen('sm', max, 2) {
+          @include screen("sm", max, 2) {
             margin-top: -1px;
           }
         }
+      }
+    }
+  }
+
+  &_type3 {
+    #{$b} {
+      &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-sizing: border-box;
+
+        @include rule(
+          padding,
+          (
+            xl: 25px 30px,
+            xlg: 25 30,
+            lg: 25 30,
+            md: 25 30,
+            sm: 25,
+          )
+        );
+      }
+
+      &__title {
+        letter-spacing: normal;
+        line-height: 1.18;
+
+        @include rule(
+          font-size,
+          (
+            xl: 18px,
+            xlg: 18,
+            lg: 18,
+            md: 18,
+            sm: 18,
+          )
+        );
+      }
+
+      &__clear {
+        width: auto;
+        color: $nd-color-border6;
+
+        @include rule(
+          font-size,
+          (
+            xl: 15px,
+            xlg: 15,
+            lg: 15,
+            md: 15,
+            sm: 15,
+          )
+        );
+      }
+
+      &__wrapper {
+        @include rule(
+          width,
+          (
+            xl: 508px,
+            xlg: 508,
+            lg: 508,
+            md: 508,
+          )
+        );
+        @include rule(
+          max-height,
+          (
+            xl: 450px,
+            xlg: 450,
+            lg: 450,
+            md: 450,
+            sm: none,
+          )
+        );
+      }
+
+      &__content {
+        @include rule(
+          padding-top,
+          (
+            xl: 10px,
+            xlg: 10,
+            lg: 10,
+            md: 10,
+            sm: 24,
+          )
+        );
+        @include rule(
+          padding-bottom,
+          (
+            xl: 60px,
+            xlg: 60,
+            lg: 60,
+            md: 60,
+            sm: 65,
+          )
+        );
+        @include rule(
+          padding-left,
+          (
+            xl: 30px,
+            xlg: 30,
+            lg: 30,
+            md: 30,
+            sm: 25,
+          )
+        );
+        @include rule(
+          padding-right,
+          (
+            xl: 30px,
+            xlg: 30,
+            lg: 30,
+            md: 30,
+            sm: 25,
+          )
+        );
       }
     }
   }
