--- a/app/components/results/nd-results.scss
+++ b/app/components/results/nd-results.scss
@@ -9,28 +9,28 @@
   margin-left: -25px;
   margin-right: -25px;
 
-  @include screen('xlg', max, 2) {
+  @include screen("xlg", max, 2) {
     padding-top: pxtovw(12, 1660);
     margin-left: pxtovw(-25, 1660);
     margin-right: pxtovw(-25, 1660);
     width: calc(100% + ((5000 / 1660) * 1vw));
   }
 
-  @include screen('lg', max, 2) {
+  @include screen("lg", max, 2) {
     padding-top: pxtovw(12, 1366);
     margin-left: pxtovw(-10, 1366);
     margin-right: pxtovw(-10, 1366);
     width: calc(100% + ((2000 / 1366) * 1vw));
   }
 
-  @include screen('md', max, 2) {
+  @include screen("md", max, 2) {
     padding-top: 0;
     margin-left: pxtovw(-10, 960);
     margin-right: pxtovw(-10, 960);
     width: calc(100% + ((2000 / 960) * 1vw));
   }
 
-  @include screen('sm', max, 2) {
+  @include screen("sm", max, 2) {
     margin-top: pxtovw(-9, 375);
     margin-left: pxtovw(-10, 375);
     margin-right: pxtovw(-10, 375);
@@ -43,19 +43,19 @@
     &:not(:first-child) {
       margin-top: 16px;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         margin-top: pxtovw(16, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         margin-top: pxtovw(7, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-top: pxtovw(-2, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-top: pxtovw(-9, 375);
       }
     }
@@ -68,19 +68,19 @@
   .is-search-by-offer-type & {
     padding-top: 0;
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       margin-left: pxtovw(-25, 1366);
       margin-right: pxtovw(-25, 1366);
       width: calc(100% + ((5000 / 1366) * 1vw));
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       margin-left: pxtovw(-10, 960);
       margin-right: pxtovw(-10, 960);
       width: calc(100% + ((2000 / 960) * 1vw));
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       margin-left: pxtovw(-10, 375);
       margin-right: pxtovw(-10, 375);
       width: calc(100% + ((2000 / 375) * 1vw));
@@ -94,22 +94,22 @@
     margin-top: 30px;
     padding: 0 25px;
 
-    @include screen('xlg', max, 2) {
+    @include screen("xlg", max, 2) {
       margin-top: pxtovw(30, 1660);
       padding: 0 pxtovw(25, 1660);
     }
 
-    @include screen('lg', max, 2) {
+    @include screen("lg", max, 2) {
       margin-top: pxtovw(30, 1366);
       padding: 0 pxtovw(10, 1366);
     }
 
-    @include screen('md', max, 2) {
+    @include screen("md", max, 2) {
       margin-top: pxtovw(30, 960);
       padding: 0 pxtovw(10, 960);
     }
 
-    @include screen('sm', max, 2) {
+    @include screen("sm", max, 2) {
       margin-top: pxtovw(30, 375);
       padding: 0 pxtovw(10, 375);
     }
@@ -118,23 +118,23 @@
       width: 50%;
       margin-top: 40px;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         margin-top: pxtovw(40, 1660);
         padding: 0 pxtovw(25, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         margin-top: pxtovw(40, 1366);
         padding: 0 pxtovw(25, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         width: 33.3%;
         margin-top: pxtovw(30, 960);
         padding: 0 pxtovw(10, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         width: 100%;
         margin-top: pxtovw(30, 375);
         padding: 0 pxtovw(10, 375);
@@ -145,20 +145,20 @@
       margin-top: 40px;
       width: 25%;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         margin-top: pxtovw(40, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         margin-top: pxtovw(40, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-top: pxtovw(30, 960);
         width: 33.3%;
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-top: pxtovw(30, 375);
         width: 100%;
       }
@@ -172,29 +172,38 @@
       width: 33.33%;
       margin-top: 40px;
 
-      @include screen('xlg', max, 2) {
+      @include screen("xlg", max, 2) {
         margin-top: pxtovw(40, 1660);
       }
 
-      @include screen('lg', max, 2) {
+      @include screen("lg", max, 2) {
         margin-top: pxtovw(40, 1366);
       }
 
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-top: pxtovw(30, 960);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         margin-top: pxtovw(30, 375);
       }
 
-      @include screen('sm', max, 2) {
+      @include screen("sm", max, 2) {
         width: 100%;
       }
     }
 
     &_mt23 {
-      @include rule(margin-top, (xl: 23px,xlg: 23, lg: 23, md: 23, sm: 23));
+      @include rule(
+        margin-top,
+        (
+          xl: 23px,
+          xlg: 23,
+          lg: 23,
+          md: 23,
+          sm: 23,
+        )
+      );
     }
 
     &_mt-1 {
@@ -207,26 +216,93 @@
     width: 100%;
   }
 
+  &__subheader {
+    display: block;
+    font-family: $font-stolzl;
+    font-weight: 400;
+    letter-spacing: -0.015em;
+
+    @include rule(
+      font-size,
+      (
+        xl: 16px,
+        xlg: 16,
+        lg: 16,
+        md: 16,
+        sm: 16,
+      )
+    );
+
+    &:not(:first-child) {
+      @include rule(
+        margin-top,
+        (
+          xl: 45px,
+          xlg: 45,
+          lg: 45,
+          md: 40,
+          sm: 40,
+        )
+      );
+    }
+
+    &:not(:last-child) {
+      @include rule(
+        margin-bottom,
+        (
+          xl: 0,
+        )
+      );
+    }
+  }
+
   &__divider {
     display: block;
     width: 100%;
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 42px, xlg: 42, lg: 42, md: 42, sm: 40));
+      @include rule(
+        margin-top,
+        (
+          xl: 42px,
+          xlg: 42,
+          lg: 42,
+          md: 42,
+          sm: 40,
+        )
+      );
     }
 
     &:not(:last-child) {
-      @include rule(margin-bottom, (xl: 10px, xlg: 10, lg: 10, md: 20, sm: 20));
+      @include rule(
+        margin-bottom,
+        (
+          xl: 10px,
+          xlg: 10,
+          lg: 10,
+          md: 20,
+          sm: 20,
+        )
+      );
     }
 
     + #{$b}__item {
-      @include screen('md', max, 2) {
+      @include screen("md", max, 2) {
         margin-top: 0;
       }
     }
 
     &-name {
-      @include rule(font-size, (xl: 20px, xlg: 20, lg: 16, md: 15, sm: 15));
+      @include rule(
+        font-size,
+        (
+          xl: 20px,
+          xlg: 20,
+          lg: 16,
+          md: 15,
+          sm: 15,
+        )
+      );
 
       display: block;
       line-height: (24 / 20);
@@ -245,7 +321,16 @@
     .space-type {
       &__box {
         &:not(:last-child) {
-          @include rule(margin-right, (xl: 8px, xlg: 8, lg: 8, md: 8, sm: 8));
+          @include rule(
+            margin-right,
+            (
+              xl: 8px,
+              xlg: 8,
+              lg: 8,
+              md: 8,
+              sm: 8,
+            )
+          );
         }
       }
     }
@@ -259,23 +344,50 @@
     padding-top: 0;
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 15px, xlg: 15, lg: 13, md: 0, sm: 40));
+      @include rule(
+        margin-top,
+        (
+          xl: 15px,
+          xlg: 15,
+          lg: 13,
+          md: 0,
+          sm: 40,
+        )
+      );
     }
 
     #{$b} {
-
       &__item {
         padding-left: 0;
         padding-right: 0;
 
-        @include rule(margin-top, (sm: 20));
+        @include rule(
+          margin-top,
+          (
+            sm: 20,
+          )
+        );
 
         &:first-child {
-          @include rule(margin-top, (md: 0));
+          @include rule(
+            margin-top,
+            (
+              md: 0,
+            )
+          );
         }
 
         &_mt30 {
-          @include rule(margin-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+          @include rule(
+            margin-top,
+            (
+              xl: 30px,
+              xlg: 30,
+              lg: 30,
+              md: 30,
+              sm: 30,
+            )
+          );
         }
 
         &_mt-1 {
