--- a/app/pages/newest/sitemap/redesign-sitemap.pug
+++ b/app/pages/newest/sitemap/redesign-sitemap.pug
@@ -44,6 +44,7 @@ block content
             +e.list
               +nd-link(href="single-offer-dp.html") Spacepool - Single Offer Page Day Pass (single-offer-dp.html)
               +nd-link(href="search-v3-1.html") Spacepool - Search (search-v3-1.html)
+              +nd-link(href="space-v5-1.html") Spacepool - Space (space-v5-1.html)
 
           +e.group
             +e.head
